k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ozz
spec:
  ingressClassName: traefik
  rules:
    - host: ozz.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ozz-gateway
                port:
                  number: 8000
          - path: /login/guest
            pathType: Prefix
            backend:
              service:
                name: ozz-gateway
                port:
                  number: 8000
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: ozz-gateway
                port:
                  number: 8000
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: ozz-gateway
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ozz-frontend
                port:
                  number: 3000
